Fix background color in safari

--- a/app/views/shared/_meta.html.erb
+++ b/app/views/shared/_meta.html.erb
@@ -7,7 +7,7 @@
   author: 'Demagog.cz',
   web_author: 'Demagog2 Dev Team — github.com/Demagog2',
   viewport: content_for?(:viewport) ? yield(:viewport) : 'width=device-width, initial-scale=1',
-  'theme-color': '#f04124',
+  'theme-color': '#ffffff',
   charset: 'utf-8',
   alternate: [
     { href: rss_index_path(format: :atom), type: 'application/rss+xml', title: 'RSS' },
