Add EFCSN badge

--- a/app/components/footer_component.html.erb
+++ b/app/components/footer_component.html.erb
@@ -150,6 +150,12 @@
                   <img loading="lazy" class="mh-80px" src="<%= asset_path("cedmo.jpg") %>" />
                 </a>
               </div>
+
+              <div class="mt-4">
+                <a class="me-4" title="EFCSN" href="https://efcsn.com/">
+                  <img loading="lazy" class="mh-80px" src="<%= asset_path("partners/badge-verified-member.png") %>" />
+                </a>
+              </div>
             </div>
           </div>
         </div>
