Add elv.ai logo to to the footer

--- a/app/components/footer_component.html.erb
+++ b/app/components/footer_component.html.erb
@@ -139,8 +139,11 @@
                 <a class="me-4" title="Little Greta" href="http://littlegreta.co.uk/">
                   <img loading="lazy" class="h-50px" src="<%= asset_path('partners/little_greta_white.svg') %>" />
                 </a>
-                <a title="Newton Media" href="https://www.newtonmedia.cz/cs">
+                <a class="me-4" title="Newton Media" href="https://www.newtonmedia.cz/cs">
                   <img loading="lazy" class="h-50px" src="<%= asset_path("partners/newton_media_light.svg") %>" />
+                </a>
+                <a title="elv.ai" href="https://elv.ai/">
+                  <img loading="lazy" class="h-50px" src="<%= asset_path("partners/elvai.svg") %>" />
                 </a>
               </div>
             </div>
