--- a/app/views/promises/overview.html.erb
+++ b/app/views/promises/overview.html.erb
@@ -7,7 +7,7 @@
 
 >
   <h2 class="fs-1 fw-600"><%= @all.size %> sledovaných slibů</h2>
-  <div class="">
+  <div>
     <div class="d-flex flex-wrap my-10">
       <% @promise_rating_keys.each do |promise_rating_key| %>
         <div class="d-flex flex-wrap align-items-center me-5 me-lg-10 py-2">
