--- a/app/views/statement/index.html.erb
+++ b/app/views/statement/index.html.erb
@@ -21,7 +21,7 @@
       partial: 'statement/elastic_filterable_list',
       locals: {
         context: {},
-        enable_filters: [:body_id, :speaker_id, :editor_picked, :tag_id, :veracity_key, :released_year, :fulltext],
+        enable_filters: [:body_id, :speaker_id, :tag_id, :veracity_key, :released_year, :fulltext],
         params: @params,
         no_filters_url: statements_path()
       }
