--- a/app/components/portrait_component.html.erb
+++ b/app/components/portrait_component.html.erb
@@ -1,3 +1,3 @@
 <% if speaker_presenter.has_portrait? %>
-  <%= render(ImageComponent.new(src: speaker_presenter.portrait_url, alt: speaker_presenter.full_name, lazy: @lazy_loaded)) %>
+  <%= render(ImageComponent.new(src: speaker_presenter.portrait_url(size: @size), alt: speaker_presenter.full_name, lazy: @lazy_loaded)) %>
 <% end %>
