Update page title

--- a/app/views/homepage/index.html.erb
+++ b/app/views/homepage/index.html.erb
@@ -1,4 +1,5 @@
 <% content_for(:hide_layout_donate_and_subscribe, true) %>
+<% content_for(:title, 'Ověřujeme pro Vás') %>
 
 <div class="row g-5 g-lg-10 flex-lg-row-reverse" data-controller="components--modal">
   <% if @page_number.blank? %>
