Add workshops to the navigation

--- a/app/views/components/_header.html.erb
+++ b/app/views/components/_header.html.erb
@@ -14,8 +14,8 @@
     ]
   ),
   Struct::NavLink.new('O nás', '/stranka/o-nas'),
+  Struct::NavLink.new('Workshopy', '/stranka/workshopy-demagogcz')
 ]
-
 
 %>
 
