Implemented feedback from 18th of March (vol. 1)

--- a/app/assets/stylesheets/campaign.scss
+++ b/app/assets/stylesheets/campaign.scss
@@ -21,8 +21,8 @@ html {
 }
 
 .logoDemagog {
-  width: 98px;
-  height: 30px;
+  width: 120px;
+  height: 35px;
   margin-top: 20px;
   margin-left: 25px;
 }
@@ -259,7 +259,7 @@ html {
 .liIcon,
 .liText {
   display: inline;
-  margin: 8px 0px;
+  margin: 10px 0;
 }
 
 .liIcon {
@@ -455,7 +455,7 @@ html {
   }
 
   .headerContainerPage1 {
-    margin-top: 47vh;
+    margin-top: 34vh;
     padding-left: 131px;
     text-shadow: #141313 2px 2px 50px;
   }
@@ -566,6 +566,7 @@ html {
     line-height: 50px;
     max-width: 690px;
     margin-left: 20px;
+    margin-bottom: 5px;
   }
 
   .buttonsContainer2Page3 {
