--- a/app/components/partners_container_component.html.erb
+++ b/app/components/partners_container_component.html.erb
@@ -1,4 +1,4 @@
-<p class="partnersP">Partneři projektu:</p>
+<p class="partnersP">Mediální partneři:</p>
 
 <div class="partnersContainerLogo">
   <%= image_tag('campaign/logo-cedmo.png', class: 'logoCedmo', alt: 'CEDMO') %>
