--- a/app/views/campaign/index.html.erb
+++ b/app/views/campaign/index.html.erb
@@ -1,3 +1,5 @@
+<% content_for(:title, "Dezinformace Vás mohou zasáhnout\u2026") %>
+
 <%= render(PageComponent.new(page: 1)) do %>
   <%= render(CampaignHeaderComponent.new) %>
 
@@ -5,7 +7,7 @@
     <h1 class="headerWhite">
       <span class="headerOrange">Dezinformace</span>
       <br/>
-      nás mohou zasáhnout...
+      nás mohou zasáhnout&hellip;
     </h1>
   </div>
 
@@ -90,15 +92,12 @@
     </p>
     <ul class="ulPage3">
       <li class="listPage3">
-        <p class="liText">více, než deset let zkušeností</p>
+        <p class="liText">máme více, než deset let zkušeností</p>
       </li>
       <li class="listPage3">
         <p class="liText">
-          součástí mezinárodních fact-checkingových organizací
+          jsme součástí mezinárodních fact-checkingových organizací
         </p>
-      </li>
-      <li class="listPage3">
-        <p class="liText">partneři Facebooku pro ČR</p>
       </li>
     </ul>
   </div>
