--- a/app/views/layouts/campaign.html.erb
+++ b/app/views/layouts/campaign.html.erb
@@ -25,23 +25,13 @@
     href="<%= image_path('campaign/obrazek-sundana-maska-big.jpg') %>"
     />
 
-  <% unless Rails.env.test? %>
-    <!-- Google Tag Manager -->
-    <script>
-      (function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
-        new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
-      j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
-      'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
-    })(window,document,'script','dataLayer','GTM-NDL7SQZ6');
-    </script>
-    <!-- End Google Tag Manager -->
-  <% end %>
+  <%= render(GoogleTagManagerComponent.new(cookies: @cookies)) %>
 </head>
 <body>
-  <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-NDL7SQZ6"
-                  height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
+  <%= render(GoogleTagManagerComponent.new(cookies: @cookies, iframe: true)) %>
+
   <%= yield %>
 
-  <%= javascript_pack_tag 'campaign'  %>
+  <%= javascript_pack_tag 'campaign' %>
 </body>
 </html>
