--- a/app/views/page/templates/_about_us.html.erb
+++ b/app/views/page/templates/_about_us.html.erb
@@ -218,7 +218,7 @@ end
             <div class="row g-5 g-lg-10">
               <div class="col col-2">
                 <span class="symbol symbol-square symbol-circle">
-                  <img src="<%= user.avatar.url %>" alt="<%= user.full_name %>" class="w-100"/>
+                  <img src="<%= user.avatar.variant(:thumbnail).processed.url %>" alt="<%= user.full_name %>" class="w-100"/>
                 </span>
               </div>
               <div class="col col-10">
