Conditional campaign js pack

--- a/app/views/layouts/campaign.html.erb
+++ b/app/views/layouts/campaign.html.erb
@@ -32,6 +32,8 @@
 
   <%= yield %>
 
-  <%= javascript_pack_tag 'campaign' %>
+  <% unless Rails.env.test?  %>
+    <%= javascript_pack_tag 'campaign' %>
+  <% end %>
 </body>
 </html>
