Fix donate typo

--- a/app/views/components/_header.html.erb
+++ b/app/views/components/_header.html.erb
@@ -89,7 +89,7 @@
                 <a
                   class="btn bg-primary w-100"
                   data-action="click->components--modal#openModal"
-                  data-modal-id="modalDanate"
+                  data-modal-id="modalDonate"
                 >
                   <span class="mx-2">Podpořte nás</span>
                 </a>
@@ -144,7 +144,7 @@
             <a
               class="btn bg-primary"
               data-action="click->components--modal#openModal"
-              data-modal-id="modalDanate"
+              data-modal-id="modalDonate"
             >
               <span class="mx-2">Podpořte nás</span>
             </a>
