--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -24,7 +24,7 @@
     <%= render(FooterComponent.new(cookies: @cookies)) %>
     <%= render "components/cookies" %>
 
-    <div class="modal" id="modalDanate" data-controller="components--modal" data-target="components--modal.modal">
+    <div class="modal" id="modalDonate" data-controller="components--modal" data-target="components--modal.modal">
       <div class="modal-overlay"></div>
       <div class="modal-container px-5">
         <div class="w-100 mw-500px bg-light p-5 p-lg-8 rounded-l shadow">
