--- a/app/views/layouts/nocookies.html.erb
+++ b/app/views/layouts/nocookies.html.erb
@@ -26,7 +26,7 @@
       </div>
     </main>
 
-    <div class="modal" id="modalDanate" data-controller="components--modal" data-target="components--modal.modal">
+    <div class="modal" id="modalDonate" data-controller="components--modal" data-target="components--modal.modal">
       <div class="modal-overlay"></div>
       <div class="modal-container px-5">
         <div class="w-100 mw-500px bg-light p-5 p-lg-8 rounded-l shadow">
