--- a/app/components/google_tag_manager_component.html.erb
+++ b/app/components/google_tag_manager_component.html.erb
@@ -4,13 +4,29 @@
     <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=<%= google_tag_manager_id %>"
                       height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
    <% else %>
+   <script>
+     // Define dataLayer and the gtag function.
+     window.dataLayer = window.dataLayer || [];
+     function gtag(){dataLayer.push(arguments);}
+
+     // Set default consent to 'denied' as a placeholder
+     // Determine actual values based on your own requirements
+
+     gtag('consent', 'default', {
+       'ad_storage': 'granted',
+       'ad_user_data': 'granted',
+       'ad_personalization': 'granted',
+       'analytics_storage': 'granted'
+     });
+   </script>
+
     <!-- Google Tag Manager -->
     <script>
-      (function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
-          new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
-        j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
-        'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
-      })(window,document,'script','dataLayer','<%= google_tag_manager_id %>');
+    (function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
+    new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
+    j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
+    'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
+    })(window,document,'script','dataLayer','<%= google_tag_manager_id %>');
     </script>
     <!-- End Google Tag Manager -->
   <% end %>
