--- a/app/components/partners_container_component.html.erb
+++ b/app/components/partners_container_component.html.erb
@@ -1,7 +1,11 @@
-<p class="partnersP">Mediální partneři:</p>
+ <footer class="footer">
+  <div>
+    <p class="partnersP">Mediální partneři:</p>
 
-<div class="partnersContainerLogo">
-  <%= image_tag('campaign/logo-cedmo.png', class: 'logoCedmo', alt: 'CEDMO') %>
+    <div class="partnersContainerLogo">
+        <%= image_tag('campaign/logo-cedmo.png', class: 'logoCedmo', alt: 'CEDMO') %>
 
-  <%= image_tag('campaign/logo-ct.png', class: 'logoCt', alt: 'Česká televize') %>
-</div>
+      <%= image_tag('campaign/logo-ct.png', class: 'logoCt', alt: 'Česká televize') %>
+    </div>
+  </div>
+</footer>
