--- a/app/assets/stylesheets/_back_compatibility.scss
+++ b/app/assets/stylesheets/_back_compatibility.scss
@@ -69,6 +69,10 @@ p {
   min-width: 100px !important;
 }
 
+.min-w-150px {
+  min-width: 150px !important;
+}
+
 .w-30px {
   width: 30px !important;
 }
@@ -79,6 +83,10 @@ p {
 
 .w-45px {
   width: 45px !important;
+}
+
+.w-50px {
+  width: 50px !important;
 }
 
 .w-100px {
