Resolve back compatibility in scss (vol. 1)

--- a/app/assets/stylesheets/core/_btn.scss
+++ b/app/assets/stylesheets/core/_btn.scss
@@ -21,9 +21,17 @@
     padding: 0;
   }
 
+  &:hover {
+    color: $white;
+  }
+
   &.white {
     color: $dark;
     background-color: $white;
+
+    &:hover {
+      color: $dark;
+    }
   }
 
   &.outline {
