--- a/app/components/footer_component.html.erb
+++ b/app/components/footer_component.html.erb
@@ -15,7 +15,7 @@
                   <input type="hidden" name="id" value="f2c56d2e38">
                   <input type="email" class="input" placeholder="Váš e-mail" name="MERGE0" id="MERGE0" autocapitalize="off" autocorrect="off">
                   <div class="small mt-4">
-                    Stisknutím „začít odebírat‟ souhlasíte se zpracováním e&#8209;mailu dle <br><a class="text-dark text-underline" href="/stranka/zasady-zpracovani-osobnich-udaju">Zásad zpracování osobních údajů</a>.
+                    Stisknutím „začít odebírat‟ souhlasíte se zpracováním e&#8209;mailu dle <br><a class="text-dark text-decoration-underline" href="/stranka/zasady-zpracovani-osobnich-udaju">Zásad zpracování osobních údajů</a>.
                   </div>
                 </div>
                 <div class="min-w-150px mt-5 mt-lg-0">
@@ -69,7 +69,7 @@
           <h4 class="fs-5 mb-4">Demagog.cz, z.s.</h4>
           <p class="small mb-4">IČO: 05140544 <br>se sídlem Roháčova 145/14<br>Žižkov, 130 00 Praha 3</p>
           <p class="small mb-4">Zapsaný ve spolkovém rejstříku u Městského soudu v Praze.</p>
-          <p class="small mb-4">Demagog.cz má <a class="text-white text-underline" href="https://www.rb.cz/povinne-zverejnovane-informace/transparentni-ucty?mvcPath=transactions&accountNumber=9711283001&path=transactions">transparentní bankovní účet 9711283001/5500</a> vedený u Raiffeisenbank, a.s.</p>
+          <p class="small mb-4">Demagog.cz má <a class="text-white text-decoration-underline" href="https://www.rb.cz/povinne-zverejnovane-informace/transparentni-ucty?mvcPath=transactions&accountNumber=9711283001&path=transactions">transparentní bankovní účet 9711283001/5500</a> vedený u Raiffeisenbank, a.s.</p>
         </div>
         <div class="col col-12 col-md-6 col-lg-4">
           <h4 class="fs-5 mb-4">Kontakty</h4>
@@ -77,20 +77,20 @@
             <h6>Kontaktní osoba</h6>
             <p class="small">Petr Gongala | koordinátor projektu</p>
             <p class="small">
-              <a class="text-white text-underline" href="mailto:petr.gongala@demagog.cz">petr.gongala@demagog.cz</a>
+              <a class="text-white text-decoration-underline" href="mailto:petr.gongala@demagog.cz">petr.gongala@demagog.cz</a>
             </p>
             <p class="small">+420 775 275 177</p>
           </div>
           <div class="mb-4">
             <h6>Výtky k hodnocením, workshopy, různé</h6>
             <p class="small">
-              <a class="text-white text-underline" href="mailto:info@demagog.cz">info@demagog.cz</a>
+              <a class="text-white text-decoration-underline" href="mailto:info@demagog.cz">info@demagog.cz</a>
             </p>
           </div>
           <div class="">
             <h6>Pro média</h6>
             <p class="small">
-              <a class="text-white text-underline" href="https://onedrive.live.com/?authkey=%21APcY4m0I%5F%2DYrtMo&id=A3F546CED092EB9D%2191240&cid=A3F546CED092EB9D">Loga ke stažení</a>
+              <a class="text-white text-decoration-underline" href="https://onedrive.live.com/?authkey=%21APcY4m0I%5F%2DYrtMo&id=A3F546CED092EB9D%2191240&cid=A3F546CED092EB9D">Loga ke stažení</a>
             </p>
           </div>
 
@@ -166,17 +166,17 @@
     </div>
     <div class="d-flex justify-content-between" data-controller="components--footer">
       <div class="small">
-        <a class="text-dark text-underline" href="/stranka/zasady-zpracovani-osobnich-udaju">Zásady zpracování osobních údajů</a>
+        <a class="text-dark text-decoration-underline" href="/stranka/zasady-zpracovani-osobnich-udaju">Zásady zpracování osobních údajů</a>
       </div>
       <% if show_cookies_config? %>
         <div class="small">
           <% if cookies_accepted? %>
             <span>Souhlas s použitím cookies pro měření návštěvnosti udělen.</span>
-            <a class="text-dark text-underline link" data-action="click->components--footer#reject">Změnit na nesouhlas</a>
+            <a class="text-dark text-decoration-underline link" data-action="click->components--footer#reject">Změnit na nesouhlas</a>
           <% end %>
           <% if cookies_rejected? %>
             <span>Souhlas s použitím cookies pro měření návštěvnosti neudělen.</span>
-            <a class="text-dark text-underline link" data-action="click->components--footer#accept">Udělit souhlas</a>
+            <a class="text-dark text-decoration-underline link" data-action="click->components--footer#accept">Udělit souhlas</a>
           <% end %>
         </div>
       <% end %>
