--- a/app/views/components/_cookies.html.erb
+++ b/app/views/components/_cookies.html.erb
@@ -6,7 +6,7 @@
       <p class="fs-7">
         Abychom mohli měřit návštěvnost webu, potřebujeme Váš souhlas
         se&nbsp;zpracováním osobních údajů prostřednictvím cookies.
-        <a class="text-dark text-underline link" href="/stranka/zasady-zpracovani-osobnich-udaju">Více o&nbsp;zpracování osobních údajů</a>
+        <a class="text-dark text-decoration-underline link" href="/stranka/zasady-zpracovani-osobnich-udaju">Více o&nbsp;zpracování osobních údajů</a>
       </p>
       <div class="mt-4">
         <a class="btn me-2 my-2" data-action="click->components--footer#accept">
