--- a/app/views/statement/_detail.html.erb
+++ b/app/views/statement/_detail.html.erb
@@ -140,7 +140,7 @@
         </div>
         <div class="d-flex justify-content-between align-items-center w-100">
           <a
-            class="accordion-link text-dark text-underline"
+            class="accordion-link text-dark text-decoration-underline"
             data-target="components--accordion.link"
             data-action="click->components--accordion#toggle"
             aria-show="false"
