--- a/app/views/article/presidential_election.html.erb
+++ b/app/views/article/presidential_election.html.erb
@@ -142,7 +142,7 @@
         <div class="d-flex">
           <a
             href="#"
-            class="text-white text-underline mt-3 hide"
+            class="text-white text-decoration-underline mt-3 hide"
             data-target="components--mobile-expander.link"
             data-action="click->components--mobile-expander#toggle"
           >
