--- a/app/views/nocookies/index.html.erb
+++ b/app/views/nocookies/index.html.erb
@@ -53,7 +53,7 @@
       <div class="d-flex">
         <a
           href="#"
-          class="text-white text-underline mt-3"
+          class="text-white text-decoration-underline mt-3"
           data-target="components--mobile-expander.link"
           data-action="click->components--mobile-expander#toggle"
         >
