--- a/app/components/google_tag_manager_component.html.erb
+++ b/app/components/google_tag_manager_component.html.erb
@@ -1,9 +1,9 @@
-<% if include_tracking_on_the_page? %>
+<% if google_tag_manager_enabled? %>
   <% if embed_as_iframe? %>
     <!-- Google Tag Manager -->
     <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=<%= google_tag_manager_id %>"
                       height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
-   <% else %>
+  <% else %>
    <script>
      // Define dataLayer and the gtag function.
      window.dataLayer = window.dataLayer || [];
@@ -12,12 +12,21 @@
      // Set default consent to 'denied' as a placeholder
      // Determine actual values based on your own requirements
 
+    <% if cookie_consent_given? %>
+     gtag('consent', 'default', {
+       'ad_storage': 'denied',
+       'ad_user_data': 'denied',
+       'ad_personalization': 'denied',
+       'analytics_storage': 'denied'
+     });
+    <% else %>
      gtag('consent', 'default', {
        'ad_storage': 'granted',
        'ad_user_data': 'granted',
        'ad_personalization': 'granted',
        'analytics_storage': 'granted'
      });
+    <% end %>
    </script>
 
     <!-- Google Tag Manager -->
